# bot-rs

./: .gitignore  Cargo.toml  README.md
discord/src/: main.rs
src/: discord.rs  error.rs  handler.rs  insta.rs  lib.rs  main.rs  scraper.rs  telegram.rs  x.rs
src/bots/telegram/: mod.rs
src/core/: error.rs  mod.rs  traits.rs  types.rs
src/error/: macros.rs
src/macros/: mod.rs
src/scraper/twitter/: error.rs  mod.rs
src/scrapers/twitter/: mod.rs
src/senders/telegram/: mod.rs
src/services/: container.rs  message_service.rs  mod.rs  scraper_service.rs
src/services/scraper_service/: twitter.rs
src/services/scraper_service/twitter/: mod.rs
src/telegram/: bot.rs  error.rs  mod.rs  prelude.rs  sender.rs
src/tiktok/: mod.rs  scraper.rs
src/twitter/: mod.rs  scraper.rs
telegram/: .gitignore  Cargo.toml  README.md  WRITEUP.md  caca.json
telegram/src/: handler.rs  insta.rs  main.rs  tiktok.rs  x.rs
