[package]
name = "telegram"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "telegram_bot"
path = "src/telegram.rs"

[dependencies]
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = { version =  "1.8", features = ["full"] }
serde_json = "1.0.145"
serde = "1.0.228"
reqwest = { version = "0.12.25", features = ["json"] }
tracing = "0.1.43"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
