[package]
name = "telegram"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.17.0", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
curl = "0.4.49"
serde_json = "1.0.145"
serde = "1.0.228"
reqwest = { version = "0.12.24", features = ["blocking"]}
rustc-serialize = "0.3.25"
downloader = "0.2.8"
tempfile = "3.23.0"
file = "1.1.2"
dotenv = "0.15.0"
env = "1.0.1"
anyhow = "1.0.100"
